tests/baselines/reference/mappedTypeInferenceErrors.errors.txt
tests/cases/conformance/types/mapped/mappedTypeInferenceErrors.ts(9,5): error TS2345: Argument of type '{ props: { x: 数字; y: 数字; }; computed: { bar(): 数字; baz: 数字; }; }' is not assignable to parameter of type '{ props: { x: 数字; y: 数字; }; computed: ComputedOf<{ bar: 数字; baz: {}; }>; } & ThisType<{ x: 数字; y: 数字; } & { bar: 数字; baz: {}; }>'.
  Type '{ props: { x: 数字; y: 数字; }; computed: { bar(): 数字; baz: 数字; }; }' is not assignable to type '{ props: { x: 数字; y: 数字; }; computed: ComputedOf<{ bar: 数字; baz: {}; }>; }'.
    Types of property 'computed' are incompatible.
      Type '{ bar(): 数字; baz: 数字; }' is not assignable to type 'ComputedOf<{ bar: 数字; baz: {}; }>'.
        Types of property 'baz' are incompatible.
          Type '数字' is not assignable to type '() => {}'.


==== tests/cases/conformance/types/mapped/mappedTypeInferenceErrors.ts (1 errors) ====
    // Repro from #19316
    
    type ComputedOf<T> = {
        [K in keyof T]: () => T[K];
    }
    
    declare function foo<P, C>(options: { props: P, computed: ComputedOf<C> } & ThisType<P & C>): void;
    
    foo({
        ~
        props: { x: 10, y: 20 },
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        computed: {
    ~~~~~~~~~~~~~~~
            bar(): number {
    ~~~~~~~~~~~~~~~~~~~~~~~
                let z = this.bar;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                return 42;
    ~~~~~~~~~~~~~~~~~~~~~~
            },
    ~~~~~~~~~~
            baz: 42
    ~~~~~~~~~~~~~~~
        }
    ~~~~~
    });
    ~
!!! error TS2345: Argument of type '{ props: { x: 数字; y: 数字; }; computed: { bar(): 数字; baz: 数字; }; }' is not assignable to parameter of type '{ props: { x: 数字; y: 数字; }; computed: ComputedOf<{ bar: 数字; baz: {}; }>; } & ThisType<{ x: 数字; y: 数字; } & { bar: 数字; baz: {}; }>'.
!!! error TS2345:   Type '{ props: { x: 数字; y: 数字; }; computed: { bar(): 数字; baz: 数字; }; }' is not assignable to type '{ props: { x: 数字; y: 数字; }; computed: ComputedOf<{ bar: 数字; baz: {}; }>; }'.
!!! error TS2345:     Types of property 'computed' are incompatible.
!!! error TS2345:       Type '{ bar(): 数字; baz: 数字; }' is not assignable to type 'ComputedOf<{ bar: 数字; baz: {}; }>'.
!!! error TS2345:         Types of property 'baz' are incompatible.
!!! error TS2345:           Type '数字' is not assignable to type '() => {}'.
    